Added dynamic tweets

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-box.css" type="text/css" />
+
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -27,13 +29,13 @@
     <nav>
       <span class="header">tweeter</span>
     </nav>
-    <header>
+    <header class="topHeader">
       <div>
           <img src="/images/profile-hex.png"> 
         </div>
         <br>
         <div>
-          <h2>Your Name</h2>
+          <h2>Sir Isaac Newton</h2>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
@@ -50,5 +52,27 @@
         </form>
       </section>
     </main>
+      <div class="tweetsContainer">
+        <article class="tweetBox">
+          <header class="tweetHeader">
+            <div class="usernameAvatar">
+              <img class="avatar"src="/images/profile-hex.png" width="50px" height="50px"> 
+              <h4 class="username">LukeOloffs</h4>
+            </div>
+            <h5 class="handle">@loloffs</h5>
+          </header>
+            <div class="tweetContent">
+              <h5 class="words">Hey its me Luke</h3>
+              </div>
+            <footer class="bottomTweetBox">
+              <h6 class="timeStamp">6 days ago</h6>
+              <div class="reactions">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="retweet"><polyline points="17 1 21 5 17 9"></polyline><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><polyline points="7 23 3 19 7 15"></polyline><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="flag"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
+              </div>
+          </footer>
+        </article>
+      </div>
   </body>
 </html>
