--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="post" action="/tweets/">
+        <form id="newTweet" method="post" action="/tweets/">
           <label for="tweet-text"></label>
-          <textarea name="text" id="tweet-text">What are you humming about?</textarea>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
