--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@
         <h2>Compose Tweet</h2>
         <form id="newTweet" method="post" action="/tweets/">
           <label for="tweet-text"></label>
+          <p hidden id="alertLong">ERROR: TWEET TOO LONG </p>
+          <p hidden id="alertNoText">ERROR: TWEET TOO SHORT</p>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <button type="submit">Tweet</button>
