Responsive design and red counter when negative

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,8 @@
         </div>
   </header>
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <div class="fullContainer">
+     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="newTweet" method="post" action="/tweets/">
@@ -56,7 +57,7 @@
           </div>
         </form>
       </section>
-    </main>
+     </main>
       <div class="tweetsContainer">
         <article class="tweetBox">
           <header class="tweetHeader">
@@ -79,5 +80,6 @@
           </footer>
         </article>
       </div>
+    </div>
   </body>
 </html>
