Reformatting and linting

--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,13 @@
     <nav>
       <span class="header">tweeter</span>
       <a type="submit"id="writeANewTweet" href="#linkButton">Write a new tweet</a>
-      <!-- <a href="#newTweet">Bottom</a> -->
-      <!-- <h4 id="writeANewTweet"><b>Write</b> a new tweet</h4> -->
     </nav>
-    <header class="topHeader">
+    <header id="linkButton" class="topHeader">
       <div>
           <img src="/images/profile-hex.png"> 
         </div>
         <br>
-        <div id="linkButton">
+        <div>
           <h2>Sir Isaac Newton</h2>
         </div>
   </header>
